--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Verttraue",
   "license": "MIT",
   "dependencies": {
-    "venom-bot": "^5.0.2"
+    "venom-bot": "^5.0.2",
+    "express": "^4.18.2"
   }
 }
